feat: Complete Split-Horizon DNS implementation
- Add DNS proxy server with native-dns for proper packet handling
- Implement client IP detection and subnet-based response differentiation
- Configure different records for internal (192.168.203.5) vs external (8.8.8.8) clients
- Add comprehensive testing script and documentation
- Update README with Split-Horizon usage examples
- Real-time configuration reloading when settings change

✅ Tested: External clients get 8.8.8.8, internal clients get 192.168.203.5

--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "express-session": "^1.17.3",
     "helmet": "^7.1.0",
     "morgan": "^1.10.0",
+    "native-dns": "^0.7.0",
     "pm2-logrotate": "^3.0.0"
   },
   "devDependencies": {
