--- a/split-horizon-config.json
+++ b/split-horizon-config.json
@@ -1,9 +1,33 @@
 {
-  "enabled": false,
-  "zones": [],
+  "enabled": true,
+  "zones": [
+    {
+      "name": "dionipe.local",
+      "internal": [
+        {
+          "name": "@",
+          "type": "A",
+          "value": "192.168.203.5"
+        }
+      ],
+      "external": [
+        {
+          "name": "@",
+          "type": "A",
+          "value": "8.8.8.8"
+        }
+      ]
+    }
+  ],
   "subnets": {
-    "internal": ["192.168.0.0/16", "10.0.0.0/8", "172.16.0.0/12"],
-    "external": ["0.0.0.0/0"]
+    "internal": [
+      "192.168.0.0/16",
+      "10.0.0.0/8",
+      "172.16.0.0/12"
+    ],
+    "external": [
+      "0.0.0.0/0"
+    ]
   },
   "description": "Split-Horizon DNS Configuration - Allows different responses based on client subnet"
 }
