fix: Improve Split-Horizon UI synchronization
- Add real-time UI updates when Split-Horizon settings change
- Add status badge showing enabled/disabled state
- Add event-driven refresh mechanism between settings and zones pages
- Add visual indicators for Split-Horizon status
- Improve user feedback with dynamic status messages
- Add refresh button for manual status updates

--- a/split-horizon-config.json
+++ b/split-horizon-config.json
@@ -8,6 +8,11 @@
           "name": "@",
           "type": "A",
           "value": "192.168.203.5"
+        },
+        {
+          "name": "www",
+          "type": "A",
+          "value": "192.168.203.5"
         }
       ],
       "external": [
